# BLE-Fingerprint-Scanner

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.cjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: safety-and-build.yml
public/data/: apple-frame-hints.json  manufacturer-ids.json  service-protocol-hints.json  service-type-hints.json
scripts/: no-connect-guard.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/ble/: fingerprint.rs  mod.rs  parser.rs  scanner.rs
src-tauri/src/db/: sqlite.rs
src/utils/: deviceIdentifier.ts
